@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: /usr/lib/rpm/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.115 2002/07/31 18:27:53 jbj Exp $
+# $Id: macros.in,v 1.116 2002/07/31 19:41:33 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -295,23 +295,24 @@
 #
 %_package_version	30005
 
-# Script gets packaged file list on input and buildroot as first parameter.
-# Returns list of omitted files, i.e. files not packaged.
 #
-# Note: Disabled for legacy compatibility.
-#%__check_files         @prefix@/lib/rpm/check-files %{buildroot}
+# Script gets packaged file list on input and buildroot as first parameter.
+# Returns list of unpackaged files, i.e. files in $RPM_BUILD_ROOT not packaged.
+#
+# Note: Disable (by commenting out) for legacy compatibility.
+%__check_files         @prefix@/lib/rpm/check-files %{buildroot}
 
 #
 # Should unpackaged files in a build root terminate a build?
 #
 # Note: The default value should be 0 for legacy compatibility.
-#%_unpackaged_files_terminate_build	1
+%_unpackaged_files_terminate_build	1
 
 #
 # Should missing %doc files in the build directory terminate a build?
 #
 # Note: The default value should be 0 for legacy compatibility.
-#%_missing_doc_files_terminate_build	1
+%_missing_doc_files_terminate_build	1
 
 #==============================================================================
 # ---- Database configuration macros.
